adds initial entries in clprov table + get all route for it
